# cursock

./: .gitignore  Cargo.toml  README.md  build.rs  lib.exp
lib/windows/: wintun.def
lib/windows/arm64/: iphlpapi.lib  kernel32.lib  wintun.exp  wintun.lib
lib/windows/x64/: iphlpapi.lib  wintun.exp  wintun.lib
lib/windows/x86/: iphlpapi.lib  kernel32.lib  wintun.exp  wintun.lib
src/: adapter.rs  arp.rs  icmp.rs  ip.rs  lib.rs  socket.rs  tun.rs
src-c/: cursock.c
src/ccs/: consts.rs  iphlpapi.rs  mod.rs  structs.rs
src/utils/: mod.rs
