[package]
name = "cursock"
version = "1.2.3"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/cursock"
repository = "https://github.com/CURVoid/cursock.git"
homepage = "https://github.com/CURVoid/cursock.git"
keywords = ["cursock", "networking", "socket", "raw", "arp"]
description = "Crate for raw socketing, can be used for sending raw packets and some protocols"

[dependencies]
rand = "0.8.5"